Change the font for Chrismess (Thanks Google for Lato)

--- a/index.css
+++ b/index.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Lato:400,700');
+
+
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Lato', Arial, Helvetica, sans-serif;
 }
