--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:400,700');
-
+@import url('https://fonts.googleapis.com/css?family=Shrikhand');
 
 body {
-    font-family: 'Lato', Arial, Helvetica, sans-serif;
+    font-family: 'Shrikhand', 'Lato', Arial, Helvetica, sans-serif;
 }
