Style the Page with Funky Chris Count Functionality

--- a/index.css
+++ b/index.css
@@ -4,3 +4,20 @@
 body {
     font-family: 'Shrikhand', 'Lato', Arial, Helvetica, sans-serif;
 }
+
+input[type=text] {
+    box-sizing: border-box;
+    border: 2px solid rgb(170, 5, 129);
+    border-radius: 4px;
+}
+
+
+input[type=number] {
+
+        background-color : #1f8001; 
+        color: rgb(255,255,255)
+}
+
+ul {
+    list-style-type: none;
+  }
