Update Style in the form of changing the color of input when in focus

--- a/index.css
+++ b/index.css
@@ -11,6 +11,13 @@ input[type=text] {
     border-radius: 4px;
 }
 
+input[type=text]:focus { 
+    background-color: red;
+}
+
+input[type=number]:focus { 
+    border: 2px solid red;
+}
 
 input[type=number] {
 
