Minorly Affect Style changing focus color to blue

--- a/index.css
+++ b/index.css
@@ -10,21 +10,20 @@ input[type=text] {
     border: 2px solid rgb(170, 5, 129);
     border-radius: 4px;
 }
+input[type=number] {
 
-input[type=text]:focus { 
-    background-color: red;
+    background-color : #1f8001; 
     color: rgb(255,255,255)
 }
 
-input[type=number]:focus { 
-    border: 8px solid red;
+input:focus { 
+    background-color: rgb(0, 110, 255);
+    border: 8px solid rgb(0, 110, 255);
+    color: rgb(255,255,255)
 }
 
-input[type=number] {
 
-        background-color : #1f8001; 
-        color: rgb(255,255,255)
-}
+
 
 ul {
     list-style-type: none;
