Updates fave button to style the item that the user likes

--- a/index.css
+++ b/index.css
@@ -42,3 +42,7 @@ h1{
     box-sizing: border-box;
     border: 2px solid rgb(233, 250, 1);
 }
+
+.SUPERLOVE{
+    border: 2px solid rgb(250, 1, 196);
+}
