--- a/index.css
+++ b/index.css
@@ -1,13 +1,15 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:400,700');
 @import url('https://fonts.googleapis.com/css?family=Shrikhand');
 @import url('https://fonts.googleapis.com/css?family=Eater');
+@import url('https://fonts.googleapis.com/css?family=Spirax');
+
 body {
     font-family: 'Shrikhand', 'Lato', Arial, Helvetica, sans-serif;
 }
 
 input[type=text] {
     box-sizing: border-box;
-    border: 2px solid rgb(170, 5, 129);
+    border: 2px solid #1f8001;
     border-radius: 4px;
 }
 input[type=number] {
@@ -44,6 +46,18 @@ h1{
 }
 
 .SUPERLOVE{
-    border: 2px solid rgb(250, 1, 196);
-    background-color: rgb(250,0,195);
+    border: 2px solid rgb(146, 9, 116);
+    background-color: rgb(146, 9, 116);
+    border-radius: 4px;
+    font-family: 'Spirax', cursive;
+    font-size: 150%;
+    color: whitesmoke;
+}
+
+.fantasticFour{
+
+    background-image: url(everywhere.jpg);
+    color:rgb(2, 34, 175);
+    text-shadow: 1px 1px 2px rgba(247, 247, 247, 0.8);
+
 }
